Bug 1752323 - Fix comm/mailnews/imap/test/unit/test_imapStatusCloseDBs.js failures. r=gds

Differential Revision: https://phabricator.services.mozilla.com/D172080

--HG--
extra : moz-landing-system : lando